--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="back">#3772E7</color>
+    <color name="background">#3772E7</color>
+    <color name="light_blue">#9FBBF3</color>
+    <color name="light_gray">#E6E8EB</color>
     <color name="gray">#AEAFB4</color>
 </resources>
