--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="dm12">12dp</dimen>
     <dimen name="dm16">16dp</dimen>
     <dimen name="dm21">21dp</dimen>
+    <dimen name="dm36">36dp</dimen>
     <dimen name="dm52">52dp</dimen>
     -- size for string
     <dimen name="ln22">22sp</dimen>
