up 9 sprint 2 update

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -50,7 +50,9 @@
 
         <ImageButton
             android:id="@+id/clear_text"
-            style="@style/ClearTextImageButtonStyle"/>
+            style="@style/ClearTextImageButtonStyle"
+            android:visibility="gone"
+            tools:visibility="gone" />
 
     </RelativeLayout>
 
