--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -108,4 +108,17 @@
         <item name="android:tint">@color/black</item>
     </style>
 
+    -- style for track
+    <style name="trackStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="trackArtistStyle">
+        <item name="android:textSize">11sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
