--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     -- size for all
+    <dimen name="zero">0dp</dimen>
     <dimen name="dm4">4dp</dimen>
     <dimen name="dm8">8dp</dimen>
     <dimen name="dm12">12dp</dimen>
     <dimen name="dm16">16dp</dimen>
     <dimen name="dm21">21dp</dimen>
     <dimen name="dm36">36dp</dimen>
+    <dimen name="dm45">45dp</dimen>
     <dimen name="dm52">52dp</dimen>
     -- size for string
     <dimen name="ln22">22sp</dimen>
