--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -108,5 +108,23 @@
         <item name="android:tint">@color/gray</item>
     </style>
 
+    -- styles for track
+    <style name="trackStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="trackArtistStyle">
+        <item name="android:textSize">11sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="track_arrow_ic">
+        <item name="android:backgroundTint">?attr/colorOnPrimary</item>
+        <item name="tint">@color/gray</item>
+        <item name="iconGravity">textStart</item>
+    </style>
 
 </resources>
