--- a/app/src/main/res/layout/view_track.xml
+++ b/app/src/main/res/layout/view_track.xml
@@ -1,69 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="@dimen/dm12"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    android:padding="@dimen/dm12">
+
     <ImageView
         android:id="@+id/ic_disc_cover"
-        android:layout_gravity="center"
         android:layout_width="@dimen/dm45"
         android:layout_height="@dimen/dm45"
-        android:scaleType="fitCenter"
-        />
-    <LinearLayout
-        android:layout_width="@dimen/zero"
-        android:paddingStart="@dimen/dm8"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_gravity="center"
+        android:scaleType="fitCenter" />
 
-        <TextView
-            android:id="@+id/track_name_text_view"
-            style="@style/trackStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            tools:text="@string/null_string"
-            />
+    <FrameLayout
+        android:layout_width="@dimen/zero"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_gravity="end"
+        android:paddingStart="@dimen/dm8"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
             <TextView
-                android:id="@+id/artist_name_text_view"
-                style="@style/trackArtistStyle"
+                android:id="@+id/track_name_text_view"
+                style="@style/trackStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                tools:text="@string/null_string"
-                />
-            <ImageView
-                android:id="@+id/track_dot_image_view"
+                android:maxLines="1"
+                tools:text="@string/null_string" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:src="@drawable/ic_track_dot"
-                />
-            <TextView
-                android:id="@+id/track_lenght_text_view"
-                style="@style/trackArtistStyle"
-                android:layout_gravity="top"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="@string/null_string"
-                />
+                android:gravity="center_vertical|top"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/artist_name_text_view"
+                    style="@style/trackArtistStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="@string/null_string" />
+
+                <ImageView
+                    android:id="@+id/track_dot_image_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_track_dot" />
+
+                <TextView
+                    android:id="@+id/track_lenght_text_view"
+                    style="@style/trackArtistStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="@string/null_string" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </FrameLayout>
+
     <ImageView
         android:id="@+id/ic_track_back_arrow"
+        style="@style/track_arrow_ic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:scaleType="center"
-        android:src="@drawable/arrow_forward"
-        style="@style/track_arrow_ic"
-         />
+        android:src="@drawable/arrow_forward" />
 </LinearLayout>
