--- a/app/src/main/res/layout/view_track.xml
+++ b/app/src/main/res/layout/view_track.xml
@@ -18,8 +18,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_gravity="end"
-        android:paddingStart="@dimen/dm8"
-        android:orientation="vertical">
+        android:paddingStart="@dimen/dm8">
 
         <LinearLayout
             android:layout_width="match_parent"
