--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -121,4 +121,42 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="errorTextStyle">
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textSize">@dimen/ln19</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="searchStatusFoundOrErrorStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">@dimen/dm102</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    -- parent for ImageView
+    <style name="trackSearchResultsImage">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="notFoundStyle" parent="trackSearchResultsImage">
+        <item name="android:src">@drawable/d_m_not_found_error</item>
+    </style>
+
+    <style name="noConnectionStyle" parent="trackSearchResultsImage">
+        <item name="android:src">@drawable/l_m_no_connection_error</item>
+    </style>
+
+    <style name="refresh_button_style">
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:text">@string/button_text_search</item>
+        <item name="android:textSize">@dimen/ln14</item>
+    </style>
+
 </resources>
