--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -121,12 +121,6 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="errorTextStyle">
-        <item name="android:fontFamily">@font/ys_medium</item>
-        <item name="android:textSize">@dimen/ln19</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-
     <style name="searchStatusFoundOrErrorStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -134,6 +128,16 @@
         <item name="android:layout_marginTop">@dimen/dm102</item>
         <item name="android:orientation">vertical</item>
         <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="errorTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/dm16</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textSize">@dimen/ln19</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     -- parent for ImageView
