--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,11 +70,10 @@
 
     -- style for Switch in activity_settings.xml Dark/Light Mode
     <style name="ModeSwitch">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:thumbTint">@color/gray</item>
-        <item name="android:trackTint">@color/light_gray</item>
-        <item name="android:layout_gravity">end|center_vertical</item>
+        <item name="android:text">@string/switch_mode_string</item>
+        <item name="android:layout_gravity">start</item>
     </style>
 
     -- style for EditText in search_settings.xml Dark/Light Mode
@@ -161,8 +160,9 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="refreshButtonStyle">
+    <style name="refresh_button_style">
         <item name="backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="textAllCaps">false</item>
         <item name="android:text">@string/button_text_search</item>
         <item name="android:textSize">@dimen/ln14</item>
