--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -154,12 +154,44 @@
         <item name="android:src">@drawable/d_m_no_connection_error</item>
     </style>
 
-    <style name="refresh_button_style">
+    <style name="refreshButtonStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="backgroundTint">@color/white</item>
         <item name="android:textColor">@color/black</item>
         <item name="textAllCaps">false</item>
         <item name="android:text">@string/button_text_search</item>
         <item name="android:textSize">@dimen/ln14</item>
+    </style>
+
+    <style name="cleanHistoryButtonStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">@dimen/dm24</item>
+        <item name="android:layout_marginBottom">@dimen/dm4</item>
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:text">@string/clean_history</item>
+        <item name="android:textSize">@dimen/ln14</item>
+        <item name="cornerRadius">@dimen/dm54</item>
+    </style>
+
+    <style name="historySearchTextStyly">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/dm16</item>
+        <item name="android:paddingTop">@dimen/dm16</item>
+        <item name="android:paddingBottom">@dimen/dm12</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:paddingHorizontal">@dimen/dm16</item>
+        <item name="android:fontFamily">@font/ys_regular</item>
+        <item name="android:textSize">@dimen/ln19</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:text">@string/you_are_search</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
