--- a/app/src/main/res/layout/view_track.xml
+++ b/app/src/main/res/layout/view_track.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:foreground="?attr/selectableItemBackground"
     android:padding="@dimen/dm12">
 
     <ImageView
