12 sprinte full complete

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -42,7 +42,7 @@
 
     <FrameLayout
         android:id="@+id/switch_layout"
-        style="@style/SettingsListFrame"
+        style="@style/SettingsListFrameForSwitch"
         android:paddingEnd="6dp">
 
         <com.google.android.material.switchmaterial.SwitchMaterial
