--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -59,21 +59,42 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/history_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView style="@style/historySearchTextStyly" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/view_track" />
+
+        <Button
+            android:id="@+id/clean_history_button"
+            style="@style/cleanHistoryButtonStyle" />
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/track_recycler_view"
-        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dm16"
+        android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/view_track" />
 
     <LinearLayout
         android:id="@+id/not_found_layout"
-        style="@style/searchStatusFoundOrErrorStyle" >
+        style="@style/searchStatusFoundOrErrorStyle">
 
-        <ImageView
-            style="@style/notFoundStyle" />
+        <ImageView style="@style/notFoundStyle" />
 
         <TextView
             style="@style/errorTextStyle"
@@ -83,10 +104,9 @@
 
     <LinearLayout
         android:id="@+id/no_connection_error_layout"
-        style="@style/searchStatusFoundOrErrorStyle" >
+        style="@style/searchStatusFoundOrErrorStyle">
 
-        <ImageView
-            style="@style/noConnectionStyle" />
+        <ImageView style="@style/noConnectionStyle" />
 
         <TextView
             style="@style/errorTextStyle"
@@ -98,30 +118,6 @@
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/dm24"
             app:cornerRadius="@dimen/dm54" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/history_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <TextView
-            style="@style/historySearchTextStyly" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/search_history"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            tools:listitem="@layout/view_track"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_height="0dp"/>
-
-        <Button
-            android:id="@+id/clean_history_button"
-            style="@style/cleanHistoryButtonStyle" />
-
     </LinearLayout>
 
 </LinearLayout>
