--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,14 @@
     </style>
 
     -- style for FrameLayout in activity_settings.xml
+    <style name="SettingsListFrameForSwitch">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingVertical">@dimen/dm12</item>
+        <item name="android:paddingStart">@dimen/dm16</item>
+        <item name="android:paddingEnd">@dimen/dm12</item>
+    </style>
+
     <style name="SettingsListFrame">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -73,7 +81,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:text">@string/switch_mode_string</item>
-        <item name="android:layout_gravity">start</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">@dimen/ln16</item>
+        <item name="android:layout_gravity">center</item>
     </style>
 
     -- style for EditText in search_settings.xml Dark/Light Mode
