--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -64,7 +64,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:layout_marginTop="@dimen/dm24"
+        android:visibility="visible">
 
         <TextView style="@style/historySearchTextStyly" />
 
